fixing header on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@
 }
 
 @media (max-width: 700px) {
+    .header h1{
+        font-size: 16px;
+        width: 16.25em;
+    }
+
     .headshot {
         width: 150px;
         height: 150px;
